# weather-frontend

./: .dockerignore  .gitignore  Dockerfile  README.md  Sign_In.py  pyproject.toml
.github/workflows/: ci.yaml
components/: notifications.py  weather_card.py
pages/: 1_📊_Dashboard.py  2_🔔_Notifications.py  3_📈_History.py  4_📢_NotificationsDemo.py  SignUp.py  login_success.py
tests/: conftest.py  test_alert_notification.py  test_history.py  test_notifications.py  test_push_notifications.py  test_sign_in.py  test_sign_up.py
utils/: config.py  history.json  mock_data.py
